[tool.poetry]
name = "delfies"
version = "0.1.0"
description = "delfies is a tool for the detection of DNA Elimination breakpoints"
authors = ["Brice Letcher <brice.letcher@ens-lyon.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
