[tool.poetry]
name = "delfies"
version = "0.1.0"
description = "delfies is a tool for the detection of DNA Elimination breakpoints"
authors = ["Brice Letcher <brice.letcher@ens-lyon.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
delfies = 'delfies.delfies:main'

[tool.poetry.dependencies]
python = "^3.8.1"
pysam = "^0.22.0"
pybedtools = "^0.9.1"
click = "^8.1.7"
datasci = {path = "/home/adminbrice/Desktop/research/coding/datasci", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pynvim = "^0.5.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
